--- a/Source/TFH_Vehicles/TFH_Vehicles.csproj
+++ b/Source/TFH_Vehicles/TFH_Vehicles.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VehicleKindDefOf.cs" />
+    <Compile Include="DefOfs_TFH\VehicleKindDefOf.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\Defs\Bodies\Bodies_Vehicles_Mechanical.xml">
