--- a/Source/TFH_VehicleHauling/TFH_VehicleHauling.csproj
+++ b/Source/TFH_VehicleHauling/TFH_VehicleHauling.csproj
@@ -43,10 +43,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\..\..\workshop\content\294100\818773962\Assemblies\0Harmony.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\RimWorldWin_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -68,6 +64,7 @@
     <None Include="JobDrivers\Class1.cs" />
     <None Include="WorkGivers\Class1.cs" />
     <None Include="WorkGivers\WorkGiver_DoBillVehicle.cs" />
+    <Compile Include="WorkGivers\WorkGiver_RescueDowned.cs" />
     <Compile Include="WorkGivers\WorkGiver_HaulCorpses_WithAnimalCart.cs" />
     <Compile Include="WorkGivers\WorkGiver_Haul_WithAnimalCart.cs" />
     <None Include="SpotlightTurret.cs" />
@@ -77,14 +74,12 @@
     <None Include="_inactive\_TESTING\WheelChairSitter\JobDriver_TakeToWheelChair.cs" />
     <None Include="_inactive\_TESTING\IncidentWorker_Raid_Sanity.cs" />
     <Compile Include="HaulJobDefOf.cs" />
-    <None Include="Things\SpotlightStuff.cs" />
     <None Include="Toils\Class1.cs" />
     <Compile Include="WorkGivers\WorkGiver_HaulCorpses_WithVehicle.cs" />
     <None Include="_inactive\_TESTING\Class1.cs" />
     <None Include="_inactive\_TESTING\Class2.cs" />
     <None Include="_inactive\_TESTING\HeadLights.cs" />
     <None Include="_inactive\Class1.cs" />
-    <None Include="Things\IncendiaryFuel.cs" />
     <None Include="_inactive\CompWeaponExtensions.cs" />
     <None Include="_inactive\CompTool.cs" />
     <Compile Include="Trace.cs" />
