--- a/Source/TFH_RideableAnimals/TFH_RideableAnimals.csproj
+++ b/Source/TFH_RideableAnimals/TFH_RideableAnimals.csproj
@@ -47,7 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JobGiver_ProvideRide.cs" />
+    <None Include="JobGiver_ProvideRide.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
