--- a/Source/TFH_VehicleBase/TFH_VehicleBase.csproj
+++ b/Source/TFH_VehicleBase/TFH_VehicleBase.csproj
@@ -73,7 +73,6 @@
     <None Include="JobGivers\JobGiver_StealVehicle.cs" />
     <None Include="JobGivers\JobGiver_TakeWoundedGuest.cs" />
     <Compile Include="JobGivers\JoyGiver_GoForRide.cs" />
-    <Compile Include="DefOfs_TFH\MoteDefOf.cs" />
     <Compile Include="Recipes\Recipe_InstallArtificialBodyPart.cs" />
     <Compile Include="Recipes\Recipe_InstallNaturalVehiclePart.cs" />
     <Compile Include="Recipes\Recipe_InstallVehicleImplant.cs" />
@@ -87,7 +86,7 @@
     <Compile Include="Trace.cs" />
     <Compile Include="VehicleInfo.cs" />
     <Compile Include="VehicleRecipesUtility.cs" />
-    <None Include="Vehicle_Animal.cs" />
+    <Compile Include="Vehicle_Animal.cs" />
     <Compile Include="WorkGivers\WorkGiver_Haul_ReturnCart.cs" />
     <Compile Include="WorkGivers\WorkGiver_Refuel.cs" />
     <Compile Include="Zone_ParkingLot.cs" />
@@ -98,9 +97,6 @@
     <Compile Include="Designators\Designator_ZoneAddParkingLot.cs" />
     <None Include="Designators\Vehicle\Designator_Board.cs" />
     <Compile Include="DefOfs_TFH\VehicleJobDefOf.cs" />
-    <Compile Include="MoteCounterTFH.cs" />
-    <Compile Include="MoteMakerTFH.cs" />
-    <Compile Include="MoteThrown_TFH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Designators\Designator_Board.cs" />
     <Compile Include="TFH_BaseUtility.cs" />
@@ -134,12 +130,6 @@
     <Content Include="..\..\defs\effecterdefs\Effecter_Misc.xml">
       <Link>EffecterDefs\Effecter_Misc.xml</Link>
       <SubType>Designer</SubType>
-    </Content>
-    <Content Include="..\..\defs\effects\Mote_Special.xml">
-      <Link>Defs\Effects\Mote_Special.xml</Link>
-    </Content>
-    <Content Include="..\..\defs\effects\Mote_Visual.xml">
-      <Link>Defs\Effects\Mote_Visual.xml</Link>
     </Content>
     <Content Include="..\..\defs\jobdefs\Jobs_Misc.xml">
       <Link>JobDefs\Jobs_Misc.xml</Link>
@@ -188,6 +178,12 @@
     <Content Include="..\..\Patches\Patches_Core.xml">
       <Link>Patches_Core.xml</Link>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TFH_MoteMaker\TFH_Motes.csproj">
+      <Project>{fa737661-4233-4d27-bd05-fd17b304415e}</Project>
+      <Name>TFH_Motes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
